--- a/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
+++ b/JLT.Floorplan.App/Views/Shared/_Layout.cshtml
@@ -18,7 +18,9 @@
     <link rel="stylesheet" href="@Url.Content("~/css/font.css")" type="text/css" />
     <link rel="stylesheet" href="@Url.Content("~/css/app.css")" type="text/css" />
     <link rel="stylesheet" href="@Url.Content("~/css/bootstrap-datetimepicker.css")" type="text/css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="@Url.Content("~/libs/jquery/jquery/dist/jquery.js")"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="@Url.Content("~/libs/jquery/bootstrap-daterangepicker/daterangepicker.js")"></script>
     <script src="@Url.Content("~/libs/jquery/moment/moment.js")"></script>
     <script src="@Url.Content("~/js/bootstrap-datetimepicker.js")"></script>
