code changes related to access

--- a/JLT.Floorplan.App/Views/Account/Unauthorised.cshtml
+++ b/JLT.Floorplan.App/Views/Account/Unauthorised.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="wrapper-md">
-    <h2>Unauthorised: you have no access for this page</h2>
+    <h2>Unauthorised: you have no access to view this page</h2>
     <p>Contact administrator for access request.</p>
 </div>
 
